🍫🙎 Checkpoint ./style.css:24872531/2545 ./index.html:24872531/84

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
   </head>  
   <body>
     <div class="SETTINGS">
-      <div class="toggleSettings">
-        
-      </div>
+      <div class="settingsInner"></div>
+      <div class="toggleSettings"></div>
     </div>
     <textarea class="MAININPUT" placeholder="_"></textarea>
 
