--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
   </head>  
   <body>
     <div class="SETTINGS">
-      <div class="settingsInner"></div>
+      <div class="settingsInner">
+        
+      </div>
       <div class="toggleSettings"></div>
     </div>
     <textarea class="MAININPUT" placeholder="_"></textarea>
 
     <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
+          to make it easier for folks to view source and remix 
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js" defer></script>
+    <script src="https://button.glitch.me/button.js" defer></script>-->
   </body>
 </html>
