--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
     
+    <script src="/scripts/dat.gui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js" integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js" integrity="sha512-wM+t5MzLiNHl2fwT5rWSXr2JMeymTtixiw2lWyVk1JK/jDM4RBSFoH4J8LjucwlDdY6Mu84Kj0gPXp7rLGaDyA==" crossorigin="anonymous"></script>
     <!-- import the webpage's javascript file -->
@@ -22,11 +23,12 @@
       </div>
       <div class="toggleSettings"></div>
     </div>
+    
     <textarea class="MAININPUT" placeholder="_"></textarea>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix 
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    <div class="glitchButton" style="position:fixed;top:20px;right:20px1;"></div>
     <script src="https://button.glitch.me/button.js" defer></script>-->
   </body>
 </html>
