🏓💷 Checkpoint ./index.html:24872531/746 ./style.css:24872531/5095

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
           <label>tempo</label>
           <input class="input_tempo" type="number" step="1" />
         </div>
+        <div>
+          <label>tempo</label>
+          <input class="input_tempo" type="number" step="1" />
+        </div>
+        <div>
+          <label>tempo</label>
+          <input class="input_tempo" type="number" step="1" />
+        </div>
+        <div>
+          <button>start</button>
+        </div>
+        <div>
+          <span>tick:</span>
+        </div>
       </div>
       <div class="toggleSettings"></div>
     </div>
