👌🎰 Checkpoint ./style.css:24872531/5876 ./index.html:24872531/520

--- a/index.html
+++ b/index.html
@@ -29,23 +29,11 @@
       <div class="settingsInner">
         <div>
           <label>pause after line</label>
-          <input class="input_pauseAfterLine" type="number" step="0.1" />
+          <input class="input_pauseAfterLine" type="number" step="0.1" value="0.5"/>
         </div>
         <div>
           <label>tempo</label>
-          <input class="input_tempo" type="number" step="1" />
-        </div>
-        <div>
-          <label>tempo</label>
-          <input class="input_tempo" type="number" step="1" />
-        </div>
-        <div>
-          <label>tempo</label>
-          <input class="input_tempo" type="number" step="1" />
-        </div>
-        <div>
-          <label>tempo</label>
-          <input class="input_tempo" type="number" step="1" />
+          <input class="input_tempo" type="number" step="1" value="100"/>
         </div>
         <div>
           <button>start</button>
@@ -54,6 +42,7 @@
           <span>tick:</span>
         </div>
       </div>
+      <div class="credits">dit(.)dah(/) by aceslowman 2021</div>
       <div class="toggleSettings"></div>
     </div>
 
