📇🙍 Checkpoint ./style.css:24872531/112 ./script.js:24872531/783 ./index.html:24872531/24

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <button>start</button>
         </div>
         <div>
-          <span>tick:</span>
+          <span class="tickIndicator">tick:</span>
         </div>
       </div>
       <div class="credits">dit(.)dah(/) by aceslowman 2021</div>
