🚛☄️ Checkpoint ./script.js:24872531/512 ./index.html:24872531/55

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <div class="settingsInner">
         <div>
           <label>pause after line</label>
-          <input class="input_pauseAfterLine" type="number" step="0.1" value="0.5"/>
+          <input class="pauseInput" type="number" step="0.1" value="0.5"/>
         </div>
         <div>
           <label>tempo</label>
-          <input class="input_tempo" type="number" step="1" value="100"/>
+          <input class="tempoInput" type="number" step="1" value="100"/>
         </div>
         <div>
           <button>start</button>
