⛰🍘 Checkpoint ./script.js:24872531/694 ./index.html:24872531/83

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
-    <script src="https://unpkg.com/tone"></script>
+    <script src="https://unpkg.com/tone/build/Tone.js"></script>
+    <script src="https://unpkg.com/tone/build/Tone.js.map"></script>
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
