--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
-    <script src="https://unpkg.com/tone/build/Tone.js"></script>
-    <script src="https://unpkg.com/tone/build/Tone.js.map"></script>
+    <script src="https://unpkg.com/tone@14.7.39/build/Tone.js"></script>
+    <script src="https://unpkg.com/tone@14.7.39/build/Tone.js.map"></script>
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
