--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/tone@14.7.39/build/Tone.js.map"></script>
     
     <!-- import the webpage's javascript file -->
+    <script src="/toggleSettings.js" defer></script>
     <script src="/script.js" defer></script>
   </head>
   <body>
