💗🍩 Checkpoint ./index.html:24872531/36 ./script.js:24872531/288

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input class="tempoInput" type="number" step="1" value="120" />
         </div>
         <div>
-          <button>start</button>
+          <input id="loopButton">loop</button>
         </div>
         <div>
           <span class="tickIndicator">tick:</span>
