🎩👁 Checkpoint ./index.html:24872531/253

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
           <label>tempo</label>
           <input class="tempoInput" type="number" step="1" value="120" />
         </div>
-        <div>
-          <input id="loopButton">loop</button>
+        <div>          
+          <label>   
+            loop
+          <input class="loopButton" type="checkbox" />
+          </label>
         </div>
         <div>
           <span class="tickIndicator">tick:</span>
