🌺🎢 Checkpoint ./index.html:24872531/50 ./script.js:24872531/73 ./style.css:24872531/133

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>dit(.)dah(/)</title>
+    <title>cantus firmus</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -42,7 +42,7 @@
           <span class="tickIndicator">tick:</span>
         </div>
       </div>
-      <div class="credits">dit(.)dah(/) by aceslowman 2021</div>
+      <div class="credits">cantus firmus by aceslowman 2021</div>
       <div class="toggleSettings"></div>
     </div>
 
