--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
     <div class="SETTINGS" style="width:0%">
       <div class="settingsInner">
         <div>
-          <label>pause after line</label>
-          <input class="pauseLineInput" type="number" step="0.01" value="0.5" />
-        </div>
-        <div>
-          <label>pause after word</label>
-          <input class="pauseWordInput" type="number" step="0.01" value="0.25" />
+          <label>number of bars</label>
+          <input class="numBarsInput" type="number" step="1" value="1" />
         </div>
         <div>
           <label>tempo</label>
@@ -38,15 +34,20 @@
           <input class="loopButton" type="checkbox" />
           </label>
         </div>
-        <div>
-          <span class="tickIndicator">tick:</span>
-        </div>
       </div>
       <div class="credits">cantus firmus by aceslowman 2021</div>
       <div class="toggleSettings"></div>
     </div>
 
-    <textarea class="MAININPUT" placeholder="_"></textarea>
+    <div class="MAININPUT">
+      <div class="STAFF">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix 
