🌚🎋 Checkpoint ./index.html:24872531/9232 ./style.css:24872531/569

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <label>tempo</label>
           <input class="tempoInput" type="number" step="1" value="120" />
         </div>
-        <div>          
-          <label>   
+        <div>
+          <label>
             loop
-          <input class="loopButton" type="checkbox" />
+            <input class="loopButton" type="checkbox" />
           </label>
         </div>
       </div>
@@ -41,11 +41,30 @@
 
     <div class="MAININPUT">
       <div class="STAFF">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="LINES">
+          <div>
+            <div>C0</div>
+          </div>
+          <div>
+            <div>D0</div>
+          </div>
+          <div>
+            <div>E0</div>
+          </div>
+          <div>
+            <div>F0</div>
+          </div>
+          <div>
+            <div>G0</div>
+          </div>
+        </div>
+<!--         <div class="NOTES">
+          <div>C0</div>
+          <div>D0</div>
+          <div>E0</div>
+          <div>F0</div>
+          <div>G0</div>
+        </div> -->
       </div>
     </div>
 
