--- a/index.html
+++ b/index.html
@@ -43,19 +43,34 @@
       <div class="STAFF">
         <div class="LINES">
           <div>
+            <div>E0</div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <div></div>
+            <div></div>
+            <div></div>
             <div>C0</div>
           </div>
           <div>
-            <div>D0</div>
+            <div></div>
+            <div></div>
+            <div>A0</div>
+            <div></div>
           </div>
           <div>
-            <div>E0</div>
-          </div>
-          <div>
+            <div></div>
             <div>F0</div>
+            <div></div>
+            <div></div>
           </div>
           <div>
-            <div>G0</div>
+            <div>D0</div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
 <!--         <div class="NOTES">
