--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
+    <script type="text/babel" src="./scripts/components/MIDILog.js"></script>
     <script type="text/babel" src="./scripts/components/Note.js"></script>
     <script type="text/babel" src="./scripts/components/MusicStaff.js"></script>
     <script type="text/babel" src="./scripts/components/Settings.js"></script>
